fix: tooltip out of viewport

--- a/frontend/styles/components/shared/info-tooltip.scss
+++ b/frontend/styles/components/shared/info-tooltip.scss
@@ -16,6 +16,7 @@
     height: 32px;
     padding: 12px 8px;
     background-color: $egg-shell;
+    white-space: nowrap;
   }
 
   .value {
